overflow fix FINALLY (hopefully)

--- a/myassets/css/alum.css
+++ b/myassets/css/alum.css
@@ -24,7 +24,6 @@ html, body{
   /*max-width: 100vw;*/
   height: auto;
   /*overflow-x: hidden;*/
-
 }
 
 #nonhomepage{
@@ -66,7 +65,8 @@ input#searchsubmit:hover{
 *************************************************/
 #topsec{
   position: relative;
-  width: 100vw;
+  /*width: 100vw;*/
+  max-width: 100%;
   height: 100vh;
   max-height: 100vh;
   /*background-image: url("../media/firstlandingbanner1.jpg");*/
